# TaskManager

./: .gitignore  README.md  docker-compose-2.yml  docker-compose.yml  pyproject.toml
docker/task_manager/: .dockerignore  Dockerfile  beat-entrypoint.sh  server-entrypoint.sh  worker-entrypoint.sh
task_manager/: db.sqlite3
task_manager/dashboards/: models.py  tables.py  urls.py  views.py
task_manager/dashboards/templates/dashboards/: base.html  dashboard.html
task_manager/my_auth/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/my_auth/templates/my_auth/: login.html  register.html
task_manager/task_manager/: celery.py  settings.py  urls.py
task_manager/tasklists/: forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasklists/migrations/: 0001_initial.py  0002_tasklist_author_usertasklistpermissions.py  0003_delete_usertasklistpermissions.py
task_manager/tasklists/templates/tasklists/: tasklist.html  tasklist_form.html
task_manager/tasks/: forms.py  models.py  tasks.py  urls.py  utils.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/templates/tasks/: base.html  task_form.html  task_list.html
