[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg = {extras = ["binary"], version = "^3.2.1"}
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.1"
django-tables2 = "^2.7.0"
celery = {extras = ["redis"], version = "^5.4.0"}
gunicorn = "^23.0.0"
django-celery-beat = "^2.7.0"
